# storage/api-docs/api-docs.json
@@ -239,7 +239,7 @@
                                     "properties": {
                                         "message": {
                                             "type": "string",
-                                            "example": "successfully Created"
+                                            "example": "successfully Modified"
                                         }
                                     },
                                     "type": "object"
@@ -300,7 +300,7 @@
                 }
             }
         },
-        "/admin/board/{type}": {
+        "/admin/board/{id}": {
             "patch": {
                 "tags": [
                     "게시판"
@@ -1461,10 +1461,125 @@
                     }
                 }
             }
+        },
+        "/v1/post": {
+            "post": {
+                "tags": [
+                    "게시판 글"
+                ],
+                "summary": "게시판 글 작성",
+                "description": "게시판 글 작성",
+                "operationId": "postCreate",
+                "requestBody": {
+                    "description": "",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/postCreate"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "successfully Created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "successfully Modified"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "failed registered",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "errors": {
+                                            "properties": {
+                                                "statusCode": {
+                                                    "properties": {
+                                                        "20010": {
+                                                            "description": "이미 존재하는 type 입니다.",
+                                                            "properties": {
+                                                                "key": {
+                                                                    "description": "type",
+                                                                    "type": "string",
+                                                                    "example": "type"
+                                                                },
+                                                                "message": {
+                                                                    "type": "string"
+                                                                }
+                                                            },
+                                                            "type": "object"
+                                                        },
+                                                        "20401": {
+                                                            "description": "옵션 및 옵션 값을 확인해주세요.",
+                                                            "properties": {
+                                                                "key": {
+                                                                    "description": "options.editor.value",
+                                                                    "type": "string",
+                                                                    "example": "options.editor.value"
+                                                                },
+                                                                "message": {
+                                                                    "type": "string"
+                                                                }
+                                                            },
+                                                            "type": "object"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
         "schemas": {
+            "postCreate": {
+                "required": [
+                    "boardNo",
+                    "userNo",
+                    "title",
+                    "content"
+                ],
+                "properties": {
+                    "boardNo": {
+                        "description": "게시판 고유 번호",
+                        "type": "string",
+                        "example": 1
+                    },
+                    "title": {
+                        "description": "게시글 제목",
+                        "type": "string",
+                        "example": "게시글 입니다."
+                    },
+                    "content": {
+                        "description": "게시글 내용",
+                        "type": "string",
+                        "example": "게시글 내용입니다."
+                    }
+                },
+                "type": "object"
+            },
             "Board": {
                 "properties": {
                     "id": {
@@ -1754,7 +1869,8 @@
         {
             "name": "어드민",
             "tags": [
-                "게시판"
+                "게시판",
+                "게시판 글"
             ]
         }
     ],
